--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build"
+    "build": "astro build",
+    "lint": "npm run lint:eslint",
+    "lint:eslint": "eslint \"src/**/*.{js,ts,vue}\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
