--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "^8.9.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-vue": "^8.4.1"
+    "eslint-plugin-vue": "^8.4.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-astro": "^0.0.12"
   }
 }
