--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.4.1",
     "prettier": "^2.5.1",
-    "prettier-plugin-astro": "^0.0.12"
+    "prettier-plugin-astro": "^0.0.12",
+    "stylelint": "^14.5.0",
+    "stylelint-config-property-sort-order-smacss": "^8.0.0",
+    "stylelint-config-recommended-vue": "^1.3.0",
+    "stylelint-config-standard": "^25.0.0"
   }
 }
