--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "stylelint-config-property-sort-order-smacss": "^8.0.0",
     "stylelint-config-recommended-vue": "^1.3.0",
     "stylelint-config-standard": "^25.0.0"
+  },
+  "dependencies": {
+    "apexcharts": "^3.33.1",
+    "vue3-apexcharts": "^1.4.1"
   }
 }
