--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
-    "es6": true,
     "browser": true,
-    "vue/setup-compiler-macros": true
+    "es6": true
   },
   "extends": [
     "eslint:recommended",
@@ -21,7 +20,7 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["import", "vue"],
+  "plugins": ["import", "eslint-plugin-prettier", "vue"],
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
@@ -40,6 +39,7 @@
         }
       }
     ],
+    "prettier/prettier": "error",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-use-before-define": "off",
