--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,6 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-recommended-vue",
-    "stylelint-config-property-sort-order-smacss"
-  ],
+  "extends": "stylelint-config-property-sort-order-smacss",
   "rules": {
-    "string-quotes": "single",
     "indentation": 2
   }
 }
