--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "@example/framework-vue",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "lint": "npm run lint:prettier && npm run lint:eslint && npm run lint:stylelint",
-    "lint:prettier": "prettier -c \"src/**/*.{json,js,ts}\"",
-    "lint:eslint": "eslint \"src/**/*.{js,ts,vue}\"",
-    "lint:stylelint": "stylelint \"src/**/*.{css,vue}\""
+  "name": "magmatic-app",
+  "version": "1.0.0",
+  "description": "Magmatic App",
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/MagmaticHQ/app.git"
   },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "astro": "^0.22.20",
-    "eslint": "^8.9.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-vue": "^8.4.1",
-    "prettier": "^2.5.1",
-    "prettier-plugin-astro": "^0.0.12",
-    "stylelint": "^14.5.0",
-    "stylelint-config-property-sort-order-smacss": "^8.0.0",
-    "stylelint-config-recommended-vue": "^1.3.0",
-    "stylelint-config-standard": "^25.0.0"
+  "scripts": {
+    "build": "vite build",
+    "serve": "vite",
+    "lint": "npm run eslint && npm run stylelint",
+    "eslint": "eslint \"src/**/*.{js,ts,vue}\"",
+    "stylelint": "stylelint \"src/**/*.vue\""
   },
   "dependencies": {
-    "apexcharts": "^3.33.1",
-    "vue3-apexcharts": "^1.4.1"
+    "@fontsource/sarabun": "^4.5.0",
+    "@formatjs/intl-numberformat": "^6.2.5",
+    "apexcharts": "^3.25.0",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.2.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^6.6.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.6.0",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-property-sort-order-smacss": "^7.1.0",
+    "stylelint-config-standard": "^19.0.0",
+    "typescript": "^4.3.5",
+    "vite": "^2.6.13"
   }
 }
