Add missing assets/pairs

--- a/src/config.json
+++ b/src/config.json
@@ -102,11 +102,14 @@
     "cream:1": "Cream",
 
     "eth": "ETH",
+    "weth": "ETH",
+    "seth": "sETH",
     "dai": "DAI",
     "usdc": "USDC",
     "usdt": "USDT",
     "wbtc": "WBTC",
     "renbtc": "renBTC",
+    "sbtc": "sBTC",
     "yfi": "YFI",
     "snx": "SNX",
     "mkr": "MKR",
@@ -121,6 +124,10 @@
     "dpi": "DPI",
     "rai": "RAI",
 
+    "weth-seth": "ETH/sETH",
+    "bal-weth": "BAL/ETH",
+    "wbtc-usdc": "WBTC/USDC",
+    "usdc-mimatic": "USDC/miMATIC",
     "dai-weth": "DAI/ETH",
     "usdc-weth": "USDC/ETH",
     "usdt-weth": "USDT/ETH",
@@ -131,6 +138,7 @@
     "renbtc-weth": "renBTC/WETH",
     "tbtc-weth": "TBTC/WETH",
     "renbtc-wbtc": "renBTC/WBTC",
+    "sbtc-wbtc": "sBTC/WBTC",
     "yfi-weth": "YFI/WETH",
     "aave-weth": "AAVE/WETH",
     "comp-weth": "COMP/WETH",
@@ -160,10 +168,13 @@
     "cream:1": "#cdc5ff",
 
     "eth": "#303131",
+    "weth": "#303131",
+    "seth": "#303131",
     "dai": "#fccf64",
     "usdc": "#4d7fc1",
     "usdt": "#44aa88",
     "wbtc": "#efa25f",
+    "sbtc": "#845b37",
     "renbtc": "#87888c",
     "yfi": "#0073f9",
     "snx": "#00d1ff",
@@ -179,6 +190,10 @@
     "dpi": "#ffffff",
     "rai": "#62dcca",
 
+    "weth-seth": "#303131",
+    "bal-weth": "#262627",
+    "wbtc-usdc": "#efa25f",
+    "usdc-mimatic": "#db3737",
     "dai-weth": "#fccf64",
     "usdc-weth": "#4d7fc1",
     "usdt-weth": "#44aa88",
